--- a/mysite/rental_system/templates/rental_system/account.html
+++ b/mysite/rental_system/templates/rental_system/account.html
@@ -17,6 +17,10 @@
                 <input type="checkbox" class="custom-control-input" id="DarkTheme">
                 <label class="custom-control-label" for="DarkTheme">Dark Theme</label>
             </div>
+            <h4>Change password</h4>
+            <div class="custom-control custom-switch">
+                <a href="/password">Change password</a>
+            </div>
             <hr>
             </div>
         </div>
