--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -26,17 +26,13 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'popular' %}">Popular works</a>
-				</li>
-			</ul>
 			<ul class="navbar-nav ml-auto">
 				{% if user.is_authenticated %}
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
 						aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
 					<div class="dropdown-menu dropdown-menu-right">
+						<a class="dropdown-item" href="{% url 'reviews' %}">Reviews</a>
 						<a class="dropdown-item" href="{% url 'rented' %}">Rented Works</a>
 						<a class="dropdown-item" href="{% url 'account' %}">Account</a>
 						<div class="dropdown-divider"></div>
