--- a/mysite/rental_system/templates/rental_system/work.html
+++ b/mysite/rental_system/templates/rental_system/work.html
@@ -33,6 +33,8 @@
         {{ form }}
         <input type="submit" value="Submit">
     </form>
+    {% else %}
+    <p>You can edit your reviews <a href="{% url 'reviews' %}">here</a></p>
     {% endif %}
     {% endif %}
     {% if ratings %}
