--- a/mysite/rental_system/templates/rental_system/account.html
+++ b/mysite/rental_system/templates/rental_system/account.html
@@ -14,6 +14,7 @@
             <a href="/password">Change password</a>
             <hr>
             <h4>Extras</h4>
+            <a href="{% url 'reviews' %}"
             <div class="custom-control custom-switch">
                 <input type="checkbox" class="custom-control-input" id="DarkTheme">
                 <label class="custom-control-label" for="DarkTheme">Dark Theme</label>
