--- a/mysite/rental_system/templates/rental_system/edit_review.html
+++ b/mysite/rental_system/templates/rental_system/edit_review.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
-<form method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
-</form>
+<div class="container">
+    <form method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Submit">
+    </form>
+</div>
 {% endblock %}
