--- a/mysite/rental_system/templates/rental_system/reviews.html
+++ b/mysite/rental_system/templates/rental_system/reviews.html
@@ -1,19 +1,21 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
-{% if comments %}
-    {% for comment in comments %}
-    <div class="card w-100">
-        <div class="card-body">
-          <h5 class="card-title">{{ comment.rating }} {{ comment.user.username }}</h5>
-          <p class="card-text">{{ comment.comment }}</p>
-          <p class="card-text"><small class="text-muted">{{ comment.post_date }}</small></p>
-          <a href="{% url 'edit_review' comment.id %}">Edit</a>
-          <a href="{% url 'disable_review' comment.id %}">Delete</a>
-        </div>
-      </div>
-    {% endfor %}
-{% else %}
-<p>You havent reviewed anything!</p>
-{% endif %}
+<div class="container">
+  {% if comments %}
+  {% for comment in comments %}
+  <div class="card w-100">
+    <div class="card-body">
+      <h5 class="card-title">{{ comment.rating }} {{ comment.user.username }}</h5>
+      <p class="card-text">{{ comment.comment }}</p>
+      <p class="card-text"><small class="text-muted">{{ comment.post_date }}</small></p>
+      <a href="{% url 'edit_review' comment.id %}">Edit</a>
+      <a href="{% url 'disable_review' comment.id %}">Delete</a>
+    </div>
+  </div>
+  {% endfor %}
+  {% else %}
+  <p>You havent reviewed anything!</p>
+  {% endif %}
+</div>
 {% endblock %}
