--- a/mysite/rental_system/templates/rental_system/work.html
+++ b/mysite/rental_system/templates/rental_system/work.html
@@ -56,7 +56,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ rating.rating }} {{ rating.user.username }}</h5>
                     <p class="card-text">{{ rating.comment }}</p>
-                    <p class="card-text"><small class="text-muted">{{ rating.post_date }}</small></p>
+                    <p class="card-text"><small class="text-muted">{{ rating.edited }}</small></p>
                 </div>
             </div>
             {% endif %}
