--- a/mysite/rental_system/templates/rental_system/reviews.html
+++ b/mysite/rental_system/templates/rental_system/reviews.html
@@ -8,7 +8,7 @@
     <div class="card-body">
       <h5 class="card-title">{{ comment.rating }} {{ comment.user.username }}</h5>
       <p class="card-text">{{ comment.comment }}</p>
-      <p class="card-text"><small class="text-muted">{{ comment.post_date }}</small></p>
+      <p class="card-text"><small class="text-muted">{{ comment.edited }}</small></p>
       <a href="{% url 'edit_review' comment.id %}">Edit</a>
       <a href="{% url 'disable_review' comment.id %}">Delete</a>
     </div>
