--- a/mysite/rental_system/templates/rental_system/edit_review.html
+++ b/mysite/rental_system/templates/rental_system/edit_review.html
@@ -1,11 +1,26 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
+{% load widget_tweaks %}
+<link rel="stylesheet" href="{% static 'rating.css' %}">
 <div class="container">
     <form method="post">
         {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Submit">
+
+        {% render_field form.comment class="form-control" placeholder='Comment' minlength='3' %}         
+        <div class="star-rating">
+            <input type="radio" id="5-stars" name="rating" value="5" />
+            <label for="5-stars" class="star">&#9733;</label>
+            <input type="radio" id="4-stars" name="rating" value="4" />
+            <label for="4-stars" class="star">&#9733;</label>
+            <input type="radio" id="3-stars" name="rating" value="3" />
+            <label for="3-stars" class="star">&#9733;</label>
+            <input type="radio" id="2-stars" name="rating" value="2" />
+            <label for="2-stars" class="star">&#9733;</label>
+            <input type="radio" id="1-star" name="rating" value="1" />
+            <label for="1-star" class="star">&#9733;</label>
+        </div>
+        <input type="submit" class="btn btn-primary" value="Submit review">
     </form>
 </div>
 {% endblock %}
