--- a/mysite/rental_system/templates/rental_system/reviews.html
+++ b/mysite/rental_system/templates/rental_system/reviews.html
@@ -6,6 +6,7 @@
   {% for comment in comments %}
   <div class="card w-100">
     <div class="card-body">
+      <h5 class="card-title"><a href="{% url 'work' comment.work.id %}">{{ comment.work.title }}</a></h5>
       <h5 class="card-title">{{ comment.rating }} {{ comment.user.username }}</h5>
       <p class="card-text">{{ comment.comment }}</p>
       <p class="card-text"><small class="text-muted">{{ comment.edited }}</small></p>
