--- a/mysite/rental_system/templates/rental_system/edit_review.html
+++ b/mysite/rental_system/templates/rental_system/edit_review.html
@@ -4,6 +4,8 @@
 {% load widget_tweaks %}
 <link rel="stylesheet" href="{% static 'rating.css' %}">
 <div class="container">
+    <h3>Edit review</h3>
+    <hr>
     <form method="post">
         {% csrf_token %}
 
