--- a/mysite/rental_system/templates/rental_system/work.html
+++ b/mysite/rental_system/templates/rental_system/work.html
@@ -86,7 +86,7 @@
             <a href="{% url 'all_reviews' work.id %}">All reviews</a>
             {% endif %}
         </div>
-    </div>
+    <div>
     <hr>
     {% if other_works %}
     <h3>More from same creators</h3>
@@ -106,6 +106,8 @@
     </div>
     {% endif %}
     <br>
+</div>
+</div>
 </div>
 
 <script src="{% static 'darkmode.js' %}"></script>
