--- a/mysite/rental_system/templates/rental_system/work.html
+++ b/mysite/rental_system/templates/rental_system/work.html
@@ -17,10 +17,10 @@
     </div>
     {% endif %}
     <h1>{{ work.title }}</h1>
-    {% if avarage %}
-    <p>Rating <strong>{{ avarage }}</strong> <label for="5-stars" class="star" style="color: #f80;">&#9733;</label></p>
+    {% if work.rating %}
+    <p>Rating <strong>{{ work.rating }}</strong> <label for="5-stars" class="star" style="color: #f80;">&#9733;</label></p>
     {% else %}
-    <p>No reviews</p>
+    <p>No rating</p>
     {% endif %}
     <hr>
     <p>{{ work.type }}</p>
@@ -29,7 +29,7 @@
     <p>{{ work.publishers.all|join:", "}} {{ work.pub_date }}</p>
     <p>{{ work.desc }}</p>
     {% if user.is_authenticated %}
-    {% if not rented %}
+    {% if work.rented %}
     <td><a href="{% url 'rent_work' work.id %}" class="btn btn-primary">Rent</a></td>
     {% else %}
     <td><button class="btn btn-secondary" disabled>Rented</button></td>
@@ -77,7 +77,11 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ rating.rating }} {{ rating.user.username }}</h5>
                     <p class="card-text">{{ rating.comment }}</p>
-                    <p class="card-text"><small class="text-muted">{{ rating.edited }}</small></p>
+                    <p class="card-text"><small class="text-muted">Posted at {{ rating.post_date}}
+                    {% if rating.edited %}
+                    (edited)
+                    {% endif %}
+                </small></p>
                 </div>
             </div>
             <br>
